@@ -1,0 +1,67 @@
+/**
+ * Copyright (c) 2010-2011, Christopher J. Kucera
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions are met:
+ *     * Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *     * Redistributions in binary form must reproduce the above copyright
+ *       notice, this list of conditions and the following disclaimer in the
+ *       documentation and/or other materials provided with the distribution.
+ *     * Neither the name of the Minecraft X-Ray team nor the
+ *       names of its contributors may be used to endorse or promote products
+ *       derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL VINCENT VOLLERS OR CJ KUCERA BE LIABLE FOR ANY
+ * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+ * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+package com.apocalyptech.minecraft.xray;
+
+import java.util.HashMap;
+
+public class SolidDirectional
+{
+
+	public static enum REL_DIRECTION {
+		FORWARD,
+		BACKWARD,
+		SIDES,
+		TOP,
+		BOTTOM
+	}
+
+	public static enum DIRECTION_ABS {
+		NORTH,
+		SOUTH,
+		EAST,
+		WEST
+	}
+
+	public HashMap<REL_DIRECTION, Integer> texture_map;
+	public HashMap<Byte, DIRECTION_ABS> data_map;
+
+	public SolidDirectional()
+	{
+		this.texture_map = new HashMap<REL_DIRECTION, Integer>();
+		this.data_map = new HashMap<Byte, DIRECTION_ABS>();
+	}
+
+	public void setDir(REL_DIRECTION dir, int texture)
+	{
+		texture_map.put(dir, texture);
+	}
+
+	public void setData(byte data, DIRECTION_ABS dir)
+	{
+		data_map.put(data, dir);
+	}
+}
